[package]
name = "bsky_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
time = { version = "0.3.21", features = ["macros", "serde", "formatting", "parsing"] }
serde_with = "3.0.0"